...
        let parts = name.split(separator: "_")
        let baseName = String(parts.last ?? Substring(name))
        
        switch baseName {
        case "Все остальное", "Без категории":
            return "Uncategorised"
        case "Self-reflection", "Самоанализ":
            return "SelfReflection"
        case "Tasks":
            return "Tasks"
        case "Ресурсы проекта":
            return "ProjectResources"
        case "Команды":
            return baseName
        default:
...
